--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="tagline">Retired Day Drinker | Professional Mario Kart driver | Gelato connoisseur | World Traveler</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/jdbeek.github.io"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://github.com/jdbeek"><i class="fab fa-github"></i></a>
     </div>
 	</main>
 </body>
