--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Ollo, my names is James! Welcome to the s***show!</div>
+		<div class="intro">Ollo, my name is James! Welcome to the s***show!</div>
 		<div class="tagline">Retired Day Drinker | Professional Mario Kart driver | Gelato connoisseur | World Traveler</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
