--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>James D. Beek</title>
-
-	<link rel="icon" href="favicon.ico" type="image/png" />
+	
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<!-- <link rel="icon" href="favicon.ico" type="image/png" /> -->
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
