--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>James D. Beek</title>
+	<title>James D. Beekhuizen</title>
 	
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<!-- <link rel="icon" href="favicon.ico" type="image/png" /> -->
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Ollo, my name is James! Welcome to the s***show!</div>
+		<div class="intro">Hello, my name is James! Welcome to my symposium!</div>
 		<div class="tagline">Retired Day Drinker | Professional Mario Kart driver | Gelato connoisseur | World Traveler</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
